Página inicial da api.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -59,12 +59,12 @@
               class='card-img-top img-fluid brand-img'
               alt='Runner Shoot Image Brand'
             />
-            <div class='card-body p-4 text-center'>
-              <h5 class='h4 card-title text-primary'>{{message}}</h5>
+            <div class='card-body p-4 text-center pt-0'>
+              <h5 class='h4 card-title fw-bold' style="color: var(--bs-primary);">{{message}}</h5>
               <p class="font-monospace mb-0">Seja bem-vindo(a) à Runner Shoot API!</p>
             </div>
             <div class='card-footer p-4'>
-              <div class='d-flex flex-column ___flex-xxl-row gap-3'>
+              <div class='d-flex flex-column ___flex-xxl-row gap-2'>
                 <a
                   href='docs'
                   class='btn btn-primary icon-link icon-link-hover flex justify-content-center align-items-center px-4 w-100'
