Página inicial da api.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -64,7 +64,7 @@
               <p class="font-monospace mb-0">Seja bem-vindo(a) à Runner Shoot API!</p>
             </div>
             <div class='card-footer p-4'>
-              <div class='d-flex flex-column ___flex-xxl-row gap-2'>
+              <div class='d-flex flex-column gap-2'>
                 <a
                   href='docs'
                   class='btn btn-primary icon-link icon-link-hover flex justify-content-center align-items-center px-4 w-100'
@@ -103,7 +103,6 @@
         </div>
       </div>
     </div>
-    <!-- Your other HTML content -->
   </body>
 
 </html>
